<resources>
    <string name="activity_battery_optimizations_conclusion">If in trouble visit https://dontkillmyapp.com. It provides detailed instructions on how to disable any power-saving features that may affect app\'s performance.</string>
    <string name="activity_battery_optimizations_summary">Please disable battery optimizations for media playback while the screen is off.</string>
    <string name="activity_battery_optimizations_title">Battery Optimizations</string>
    <string name="activity_info_offline_mode">Offline mode</string>
    <string name="activity_info_server_unreachable">Server unreachable</string>
    <string name="album_bottom_sheet_add_to_queue">Add to queue</string>
    <string name="album_bottom_sheet_download_all">Download all</string>
    <string name="album_bottom_sheet_go_to_artist">Go to artist</string>
    <string name="album_bottom_sheet_instant_mix">Instant mix</string>
    <string name="album_bottom_sheet_play_next">Play next</string>
    <string name="album_bottom_sheet_remove_all">Remove all</string>
    <string name="album_bottom_sheet_share">Share</string>
    <string name="album_bottom_sheet_shuffle">Shuffle</string>
    <string name="album_catalogue_title">Albums</string>
    <string name="album_catalogue_title_expanded">Browse Albums</string>
    <string name="album_error_retrieving_artist">Error retrieving artist</string>
    <string name="album_list_page_downloaded">Downloaded albums</string>
    <string name="album_list_page_most_played">Most played albums</string>
    <string name="album_list_page_new_releases">New releases</string>
    <string name="album_list_page_recently_added">Recently added albums</string>
    <string name="album_list_page_recently_played">Recently played albums</string>
    <string name="album_list_page_starred">Hearted albums</string>
    <string name="album_list_page_title">Albums</string>
    <string name="album_page_extra_info_button">More like this</string>
    <string name="album_page_play_button">Play</string>
    <string name="album_page_release_date_label">Released on %1$s</string>
    <string name="album_page_release_dates_label">Released on %1$s, originally %2$s</string>
    <string name="album_page_shuffle_button">Shuffle</string>
    <string name="album_page_tracks_count_and_duration">%1$d songs  •  %2$d minutes</string>
    <string name="app_name">Rubato</string>
    <string name="artist_adapter_radio_station_starting">Searching…</string>
    <string name="artist_bottom_sheet_instant_mix">Instant mix</string>
    <string name="artist_bottom_sheet_shuffle">Shuffle</string>
    <string name="artist_catalogue_title">Artists</string>
    <string name="artist_catalogue_title_expanded">Browse Artists</string>
    <string name="artist_error_retrieving_radio">Error retrieving artist\'s radio</string>
    <string name="artist_error_retrieving_tracks">Error retrieving artist\'s tracks</string>
    <string name="artist_list_page_downloaded">Downloaded artists</string>
    <string name="artist_list_page_starred">Hearted artists</string>
    <string name="artist_list_page_title">Artists</string>
    <string name="artist_page_radio_button">Radio</string>
    <string name="artist_page_shuffle_button">Shuffle</string>
    <string name="artist_page_switch_layout_button">Switch layout</string>
    <string name="artist_page_title_album_more_like_this_button">More like this</string>
    <string name="artist_page_title_album_section">Albums</string>
    <string name="artist_page_title_biography_more_button">More</string>
    <string name="artist_page_title_biography_section">Biography</string>
    <string name="artist_page_title_most_streamed_song_section">Most Streamed Songs</string>
    <string name="artist_page_title_most_streamed_song_see_all_button">See all</string>
    <string name="battery_optimization_negative_button">Ignore</string>
    <string name="battery_optimization_neutral_button">Don\'t ask again</string>
    <string name="battery_optimization_positive_button">Disable</string>
    <string name="connection_alert_dialog_negative_button">Cancel</string>
    <string name="connection_alert_dialog_neutral_button">Enable data saver</string>
    <string name="connection_alert_dialog_positive_button">OK</string>
    <string name="connection_alert_dialog_summary">Access to the Subsonic server on connections other than Wi-Fi has been restricted. To prevent this alert dialog from reappearing, disable the connection check in the app settings.</string>
    <string name="connection_alert_dialog_title">Wi-Fi not connected</string>
    <string name="content_description_shuffle_button">Shuffle</string>
    <string name="delete_download_storage_dialog_negative_button">Cancel</string>
    <string name="delete_download_storage_dialog_positive_button">Continue</string>
    <string name="delete_download_storage_dialog_summary">Please be aware that continuing with this action will result in the permanent deletion of all saved items downloaded from all servers.</string>
    <string name="delete_download_storage_dialog_title">Delete saved items</string>
    <string name="description_empty_title">No description available</string>
    <string name="disc_titlefull">Disc %1$s - %2$s</string>
    <string name="disc_titleless">Disc %1$s</string>
    <string name="download_directory_dialog_negative_button">Cancel</string>
    <string name="download_directory_dialog_positive_button">Download</string>
    <string name="download_directory_dialog_summary">All tracks in this folder will be downloaded. Tracks present in subfolders will not be downloaded.</string>
    <string name="download_directory_dialog_title">Download the tracks</string>
    <string name="download_info_empty_subtitle">Once you download a song, you\'ll find it here</string>
    <string name="download_info_empty_title">No downloads yet!</string>
    <string name="download_item_multiple_subtitle_formatter">%1$s  •  %2$s items</string>
    <string name="download_item_single_subtitle_formatter">%1$s items</string>
    <string name="download_shuffle_all_subtitle">Shuffle all</string>
    <string name="download_storage_dialog_sub_summary">For the changes to take effect, restart the app.</string>
    <string name="download_storage_dialog_summary">Changing the destination of downloaded files from one storage to another will result in the immediate deletion of any previously downloaded files in the other storage.</string>
    <string name="download_storage_dialog_title">Select storage option</string>
    <string name="download_storage_external_dialog_positive_button">External</string>
    <string name="download_storage_internal_dialog_negative_button">Internal</string>
    <string name="download_title_section">Downloaded</string>
    <string name="downloaded_bottom_sheet_add_to_queue">Add to queue</string>
    <string name="downloaded_bottom_sheet_play_next">Play next</string>
    <string name="downloaded_bottom_sheet_remove">Remove</string>
    <string name="downloaded_bottom_sheet_remove_all">Remove all</string>
    <string name="downloaded_bottom_sheet_shuffle">Shuffle</string>
    <string name="empty_string" />
    <string name="error_required">Required</string>
    <string name="error_server_prefix">http or https prefix required</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="download_notification_in_progress_single">Downloading: %1$s</string>
    <string name="download_notification_in_progress_multi">Downloading: %1$s (%2$d of %3$d)</string>
    <string name="download_notification_in_progress_generic">Downloading %1$d items</string>
    <string name="download_notification_completed_title">Downloaded: %1$s</string>
    <string name="download_notification_failed_title">Download failed: %1$s</string>
    <string name="filter_info_selection">Select two or more filters</string>
    <string name="filter_title">Filter</string>
    <string name="filter_title_expanded">Filter Genres</string>
    <string name="generic_list_page_count">(%1$d)</string>
    <string name="generic_list_page_count_unknown">(+%1$d)</string>
    <string name="genre_catalogue_title">Genre Catalogue</string>
    <string name="genre_catalogue_title_expanded">Browse Genres</string>
    <string name="github_update_dialog_negative_button">Remind me later</string>
    <string name="github_update_dialog_neutral_button">Support me</string>
    <string name="github_update_dialog_positive_button">Download now</string>
    <string name="github_update_dialog_summary">There is a new version of the app available on Github.</string>
    <string name="github_update_dialog_title">Update available</string>
    <string name="home_rearrangement_dialog_negative_button">Cancel</string>
    <string name="home_rearrangement_dialog_neutral_button">Reset</string>
    <string name="home_rearrangement_dialog_positive_button">Save</string>
    <string name="home_rearrangement_dialog_title">Rearrange home</string>
    <string name="media_route_menu_title">Cast</string>
    <string name="menu_settings_button">Settings</string>
    <string name="metadata_sync_status_placeholder">Metadata sync</string>
    <string name="metadata_sync_dialog_title">Metadata sync</string>
    <string name="metadata_sync_dialog_subtitle_placeholder">Server connection: checking</string>
    <string name="metadata_sync_dialog_active_title">Active download</string>
    <string name="metadata_sync_log_title">Activity log</string>
    <string name="metadata_sync_log_empty">No sync activity yet.</string>
    <string name="widget_config_title">Widget options</string>
    <string name="widget_config_source_label">Recommendations row</string>
    <string name="widget_config_source_queue">Up next from queue</string>
    <string name="widget_config_source_recent">Recently played</string>
    <string name="widget_config_source_none">Hide recommendations</string>
    <string name="widget_config_add">Add widget</string>
    <string name="metadata_sync_dialog_downloaded_title">Downloaded metadata</string>
    <string name="metadata_sync_dialog_playlists_label">Playlists</string>
    <string name="metadata_sync_dialog_artists_label">Artists</string>
    <string name="metadata_sync_dialog_genres_label">Genres</string>
    <string name="metadata_sync_dialog_albums_label">Albums</string>
    <string name="metadata_sync_dialog_songs_label">Songs</string>
    <string name="metadata_sync_dialog_cover_art_label">Cover art</string>
    <string name="metadata_sync_dialog_lyrics_label">Lyrics</string>
    <string name="metadata_sync_count_placeholder">0</string>
    <string name="metadata_sync_last_synced_placeholder">Last sync: Not yet</string>
    <string name="metadata_sync_storage_label">Metadata storage</string>
    <string name="metadata_sync_storage_placeholder">Calculating…</string>
    <string name="action_done">Done</string>
    <string name="visualizer_settings_title">Visualizer settings</string>
    <string name="visualizer_enable_label">Enable visualizer</string>
    <string name="visualizer_style_title">Style</string>
    <string name="visualizer_style_bars">Bars</string>
    <string name="visualizer_style_line">Line</string>
    <string name="visualizer_style_dots">Dots</string>
    <string name="visualizer_bar_count_label_placeholder">Bar count</string>
    <string name="visualizer_opacity_label_placeholder">Opacity</string>
    <string name="visualizer_smoothing_label_placeholder">Smoothing</string>
    <string name="visualizer_scale_label_placeholder">Amplitude</string>
    <string name="visualizer_fps_label_placeholder">Frame rate</string>
    <string name="visualizer_color_mode_title">Color mode</string>
    <string name="visualizer_color_accent">Accent</string>
    <string name="visualizer_color_gradient">Gradient</string>
    <string name="visualizer_peak_caps_label">Peak caps</string>
</resources>